Projeto em andamento,cabecalho concluido

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +16,11 @@
 <body>
     <!-- Menu -->
     <header class="cabecalho">
-        <img class="cabecalho__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecalho__titulo">Fulana de Tal</h1>
+
+        <h1 class="cabecalho__titulo">
+            <img class="cabecalho__logo" src="assets/vector.png" alt="Logo">
+            Fabiano Alves Santos
+        </h1>
         <nav class="navegacao">
             <ul class="navegacao__lista">
                 <li class="navegacao__elemento"><a href="#sobre-mim">Sobre mim</a></li>
@@ -31,10 +35,22 @@
 
     <!-- Seção de Apresentação -->
     <section class="apresentacao">
-        <img class="apresentacao__foto" src="assets/profile.png" alt="Foto de perfil">
+        <img class="apresentacao__foto" src="assets/fas.jpg" alt="Foto de perfil">
         <div class="apresentacao__conteiner">
-            <h2 class="apresentacao__titulo">Olá, meu nome é Fulana de Tal e construo páginas web</h2>
-            <p class="apresentacao__subtitulo">Sou formada em... lorem ipsum sit amet consectetur e atualmente estou participando do projeto Oracle ONE na Alura Latam.</p>
+            <h2 class="apresentacao__titulo">Fabiano Alves: Transformando ideias em páginas web</h2>
+            <p class="apresentacao__subtitulo">Apaixonado por tecnologia e programação. Tenho formação técnica em
+                Administração e Informática, o que me deu uma base sólida em conceitos de gestão e tecnologia.
+                Atualmente, estou me especializando em desenvolvimento front-end, onde posso combinar meu amor por
+                design e funcionalidade.
+
+                Gosto de transformar ideias em experiências digitais intuitivas e agradáveis. Cada linha de código que
+                escrevo é uma oportunidade de aprender e crescer. Estou sempre em busca de novos desafios e
+                conhecimentos para me tornar um profissional ainda mais completo.
+
+                Se você está procurando alguém que entenda tanto de tecnologia quanto de gestão, estou aqui para ajudar!
+                Vamos criar algo incrível juntos.<br>Sou formada em... lorem ipsum sit amet consectetur e atualmente
+                estou
+                participando do projeto Oracle ONE na Alura Latam.</p>
             <ul class="redes">
                 <li class="redes__elemento"><a href="">Github <img src="assets/arrow.png" alt="Seta"></a></li>
                 <li class="redes__elemento"><a href="">Linkedin <img src="assets/arrow.png" alt="Seta"></a></li>
@@ -47,8 +63,13 @@
     <!-- Seção sobre mim -->
     <section class="sobre-mim" id="sobre-mim">
         <h2 class="sobre-mim__titulo">Sobre mim</h2>
-        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit,
+            volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
+            potenti. Ut semper sagittis ligula et lacinia.</p>
+        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit,
+            volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
+            potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet
+            metus.</p>
         <!-- Assinatura opcional -->
         <img class="sobre-mim__assinatura" src="assets/signature.png" alt="Assinatura">
     </section>
@@ -148,11 +169,13 @@
         <h2 class="projetos__titulo">Experiência Profissional</h2>
         <div class="projetos__conteiner">
             <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam
+                unde repudiandae fugiat, earum temporibus!</p>
         </div>
         <div class="projetos__conteiner">
             <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam unde repudiandae fugiat, earum temporibus!</p>
+            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam
+                unde repudiandae fugiat, earum temporibus!</p>
         </div>
     </section>
 
