--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Fonte do Projeto Raleway -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet" />
     <title>Meu Portfólio</title>
 </head>
 
 <body>
     <!-- Menu -->
     <header class="cabecalho">
-
         <h1 class="cabecalho__titulo">
-            <img class="cabecalho__logo" src="assets/vector.png" alt="Logo">
+            <img class="cabecalho__logo" src="assets/vector.png" alt="Logo" />
             Fabiano Alves Santos
         </h1>
         <nav class="navegacao">
             <ul class="navegacao__lista">
-                <li class="navegacao__elemento"><a href="#sobre-mim">Sobre mim</a></li>
-                <li class="navegacao__elemento"><a href="#habilidades">Habilidades</a></li>
+                <li class="navegacao__elemento">
+                    <a href="#sobre-mim">Sobre mim</a>
+                </li>
+                <li class="navegacao__elemento">
+                    <a href="#habilidades">Habilidades</a>
+                </li>
                 <li class="navegacao__elemento"><a href="#hobbies">Hobbies</a></li>
                 <li class="navegacao__elemento"><a href="#formacao">Formação</a></li>
                 <li class="navegacao__elemento"><a href="#projetos">Projetos</a></li>
@@ -35,27 +38,32 @@
 
     <!-- Seção de Apresentação -->
     <section class="apresentacao">
-        <img class="apresentacao__foto" src="assets/fas.jpg" alt="Foto de perfil">
+        <img class="apresentacao__foto" src="assets/fabiano.jpg" alt="Foto de perfil" />
         <div class="apresentacao__conteiner">
-            <h2 class="apresentacao__titulo">Fabiano Alves: Transformando ideias em páginas web</h2>
-            <p class="apresentacao__subtitulo">Apaixonado por tecnologia e programação. Tenho formação técnica em
-                Administração e Informática, o que me deu uma base sólida em conceitos de gestão e tecnologia.
-                Atualmente, estou me especializando em desenvolvimento front-end, onde posso combinar meu amor por
-                design e funcionalidade.
-
-                Gosto de transformar ideias em experiências digitais intuitivas e agradáveis. Cada linha de código que
-                escrevo é uma oportunidade de aprender e crescer. Estou sempre em busca de novos desafios e
-                conhecimentos para me tornar um profissional ainda mais completo.
-
-                Se você está procurando alguém que entenda tanto de tecnologia quanto de gestão, estou aqui para ajudar!
-                Vamos criar algo incrível juntos.<br>Sou formada em... lorem ipsum sit amet consectetur e atualmente
-                estou
-                participando do projeto Oracle ONE na Alura Latam.</p>
+            <h2 class="apresentacao__titulo">
+                Transformando ideias em páginas web
+            </h2>
+            <p class="apresentacao__subtitulo">
+                Escrever código, para mim, é uma oportunidade de aprender e expandir
+                meu conhecimento. Tenho formação técnica em Administração e
+                Informática, o que complementa minha paixão por tecnologia e
+                desenvolvimento.
+            </p>
             <ul class="redes">
-                <li class="redes__elemento"><a href="">Github <img src="assets/arrow.png" alt="Seta"></a></li>
-                <li class="redes__elemento"><a href="">Linkedin <img src="assets/arrow.png" alt="Seta"></a></li>
-                <li class="redes__elemento"><a href="">Instagram <img src="assets/arrow.png" alt="Seta"></a></li>
-                <li class="redes__elemento"><a href="">Currículo <img src="assets/arrow.png" alt="Seta"></a></li>
+                <li class="redes__elemento">
+                    <a href="https://github.com/Fas-DevNaWeb" target="_blank">Github <img src="assets/arrow.png"
+                            alt="Seta" /></a>
+                </li>
+                <li class="redes__elemento">
+                    <a href="https://www.linkedin.com/in/fabiano-fasnaweb-desenvolvedor
+                    " target="_blank">Linkedin <img src="assets/arrow.png" alt="Seta" /></a>
+                </li>
+                <li class="redes__elemento">
+                    <a href="">Instagram <img src="assets/arrow.png" alt="Seta" /></a>
+                </li>
+                <li class="redes__elemento">
+                    <a href="">Currículo <img src="assets/arrow.png" alt="Seta" /></a>
+                </li>
             </ul>
         </div>
     </section>
@@ -63,15 +71,23 @@
     <!-- Seção sobre mim -->
     <section class="sobre-mim" id="sobre-mim">
         <h2 class="sobre-mim__titulo">Sobre mim</h2>
-        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit,
-            volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
-            potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit,
-            volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse
-            potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet
-            metus.</p>
+        <p class="sobre-mim__texto">
+            Olá, sou Fabiano Alves. Assim como muitos brasileiros, acordo cedo todos
+            os dias, equilibrando minha rotina de trabalho e estudos. Sou apaixonado
+            por tecnologia e tenho um grande interesse em transformar ideias em
+            experiências digitais intuitivas e agradáveis. Atualmente, sou estudante
+            de Desenvolvimento Front End e busco oportunidades para adquirir
+            experiência na área. Valorizo o trabalho em equipe e estou sempre
+            disposto a colaborar com meus colegas, compartilhando conhecimentos e
+            aprendendo juntos. Sou uma pessoa focada e comprometida, e estou
+            constantemente em busca de novas habilidades e qualificações para
+            aprimorar minhas capacidades. Atualmente, participo do projeto Oracle
+            ONE na Alura Latam, onde consigo integrar teoria e prática em um
+            ambiente estimulante.
+        </p>
+
         <!-- Assinatura opcional -->
-        <img class="sobre-mim__assinatura" src="assets/signature.png" alt="Assinatura">
+        <img class="sobre-mim__assinatura" src="assets/signature.png" alt="Assinatura" />
     </section>
 
     <!-- Seção de Habilidades -->
@@ -79,27 +95,27 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/html.png" alt="HTML">
+                <img class="habilidades__icone" src="assets/htlm.png" alt="HTML" />
                 <p class="habilidades__nome">HTML 5</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/js_icon.png" alt="JavaScript">
+                <img class="habilidades__icone" src="assets/js_icon.png" alt="JavaScript" />
                 <p class="habilidades__nome">JavaScript</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/php_icon.png" alt="PHP">
+                <img class="habilidades__icone" src="assets/php_icon.png" alt="PHP" />
                 <p class="habilidades__nome">PHP</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/nodejs_icon.png" alt="Node.js">
+                <img class="habilidades__icone" src="assets/nodejs_icon.png" alt="Node.js" />
                 <p class="habilidades__nome">Node.js</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/react_icon.png" alt="React">
+                <img class="habilidades__icone" src="assets/react_icon.png" alt="React" />
                 <p class="habilidades__nome">React</p>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/css_icon.png" alt="CSS">
+                <img class="habilidades__icone" src="assets/css_icon.png" alt="CSS" />
                 <p class="habilidades__nome">CSS</p>
             </li>
         </ul>
@@ -110,27 +126,27 @@
         <h2 class="hobbies__titulo">Hobbies</h2>
         <ul class="hobbies__lista">
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/skate_icon.png" alt="Skate">
+                <img class="hobbies__icone" src="assets/skate_icon.png" alt="Skate" />
                 <p class="hobbies__nome">Skate</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/guitar_icon.png" alt="Tocar baixo">
+                <img class="hobbies__icone" src="assets/guitar_icon.png" alt="Tocar baixo" />
                 <p class="hobbies__nome">Tocar baixo</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/headphones_icon.png" alt="Ouvir música">
+                <img class="hobbies__icone" src="assets/headphones_icon.png" alt="Ouvir música" />
                 <p class="hobbies__nome">Ouvir música</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/tv_icon.png" alt="Assistir séries">
+                <img class="hobbies__icone" src="assets/tv_icon.png" alt="Assistir séries" />
                 <p class="hobbies__nome">Assistir séries</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/forkspoon_icon.png" alt="Cozinhar">
+                <img class="hobbies__icone" src="assets/forkspoon_icon.png" alt="Cozinhar" />
                 <p class="hobbies__nome">Cozinhar</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/camera_icon.png" alt="Fotografar">
+                <img class="hobbies__icone" src="assets/camera_icon.png" alt="Fotografar" />
                 <p class="hobbies__nome">Fotografar</p>
             </li>
         </ul>
@@ -141,21 +157,21 @@
         <h2 class="formacao__titulo">Formação Acadêmica</h2>
         <ul class="formacao__lista">
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/ufpr_logo.png" alt="UFPR">
+                <img class="formacao__icone" src="assets/ufpr_logo.png" alt="UFPR" />
                 <div>
                     <h3 class="formacao__nome">Análise de Dados</h3>
                     <p class="formacao__detalhe">2018 - UFPR</p>
                 </div>
             </li>
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/alura_logo.png" alt="Alura">
+                <img class="formacao__icone" src="assets/alura_logo.png" alt="Alura" />
                 <div>
                     <h3 class="formacao__nome">Formação em UX Design</h3>
                     <p class="formacao__detalhe">2019 - Alura</p>
                 </div>
             </li>
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/ufrj_logo.png" alt="UFRJ">
+                <img class="formacao__icone" src="assets/ufrj_logo.png" alt="UFRJ" />
                 <div>
                     <h3 class="formacao__nome">Pós-graduação em Design</h3>
                     <p class="formacao__detalhe">Em andamento - UFRJ</p>
@@ -169,13 +185,17 @@
         <h2 class="projetos__titulo">Experiência Profissional</h2>
         <div class="projetos__conteiner">
             <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam
-                unde repudiandae fugiat, earum temporibus!</p>
+            <p class="projetos__descricao">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+                quisquam unde repudiandae fugiat, earum temporibus!
+            </p>
         </div>
         <div class="projetos__conteiner">
             <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt quisquam
-                unde repudiandae fugiat, earum temporibus!</p>
+            <p class="projetos__descricao">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+                quisquam unde repudiandae fugiat, earum temporibus!
+            </p>
         </div>
     </section>
 
@@ -183,8 +203,8 @@
     <section class="contato" id="contato">
         <h2 class="contato__titulo">Contato</h2>
         <form class="contato__formulario">
-            <input class="contato__campo" type="text" placeholder="Nome">
-            <input class="contato__campo" type="email" placeholder="E-mail">
+            <input class="contato__campo" type="text" placeholder="Nome" />
+            <input class="contato__campo" type="email" placeholder="E-mail" />
             <textarea class="contato__campo contato__campo--textarea" placeholder="Mensagem"></textarea>
             <button class="contato__botao" type="submit">Enviar</button>
         </form>
