Completando mais requisitos 1

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <nav class="navegacao">
             <ul class="navegacao__lista">
                 <li class="navegacao__elemento">
-                    <a href="#sobre-mim">Sobre mim</a>
+                    <a href="#sobre-mim">Sobre mim |</a>
                 </li>
                 <li class="navegacao__elemento">
-                    <a href="#habilidades">Habilidades</a>
+                    <a href="#habilidades">Habilidades |</a>
                 </li>
-                <li class="navegacao__elemento"><a href="#hobbies">Hobbies</a></li>
-                <li class="navegacao__elemento"><a href="#formacao">Formação</a></li>
-                <li class="navegacao__elemento"><a href="#projetos">Projetos</a></li>
+                <li class="navegacao__elemento"><a href="#hobbies">Hobbies |</a></li>
+                <li class="navegacao__elemento"><a href="#formacao">Formação |</a></li>
+                <li class="navegacao__elemento"><a href="#projetos">Projetos |</a></li>
                 <li class="navegacao__elemento"><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -95,28 +95,21 @@
         <h2 class="habilidades__titulo">Habilidades</h2>
         <ul class="habilidades__lista">
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/htlm.png" alt="HTML" />
+                <img class="habilidades__icone" src="assets/html.png" alt="HTML" />
                 <p class="habilidades__nome">HTML 5</p>
+            <li class="habilidades__elemento">
+                <img class="habilidades__icone" src="assets/css-3.png" alt="CSS" />
+                <p class="habilidades__nome">CSS</p>
+            </li>
             </li>
             <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/js_icon.png" alt="JavaScript" />
+                <img class="habilidades__icone" src="assets/script-java.png" alt="JavaScript" />
                 <p class="habilidades__nome">JavaScript</p>
             </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/php_icon.png" alt="PHP" />
-                <p class="habilidades__nome">PHP</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/nodejs_icon.png" alt="Node.js" />
-                <p class="habilidades__nome">Node.js</p>
-            </li>
+
             <li class="habilidades__elemento">
                 <img class="habilidades__icone" src="assets/react_icon.png" alt="React" />
                 <p class="habilidades__nome">React</p>
-            </li>
-            <li class="habilidades__elemento">
-                <img class="habilidades__icone" src="assets/css_icon.png" alt="CSS" />
-                <p class="habilidades__nome">CSS</p>
             </li>
         </ul>
     </section>
@@ -126,28 +119,20 @@
         <h2 class="hobbies__titulo">Hobbies</h2>
         <ul class="hobbies__lista">
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/skate_icon.png" alt="Skate" />
-                <p class="hobbies__nome">Skate</p>
-            </li>
-            <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/guitar_icon.png" alt="Tocar baixo" />
-                <p class="hobbies__nome">Tocar baixo</p>
-            </li>
-            <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/headphones_icon.png" alt="Ouvir música" />
+                <img class="hobbies__icone img-alura" src="assets/musica.png" alt="Ouvir música" />
                 <p class="hobbies__nome">Ouvir música</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/tv_icon.png" alt="Assistir séries" />
+                <img class="hobbies__icone  img-alura" src="assets/assistindo-um-filme.png" alt="Assistir séries" />
                 <p class="hobbies__nome">Assistir séries</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/forkspoon_icon.png" alt="Cozinhar" />
-                <p class="hobbies__nome">Cozinhar</p>
+                <img class="hobbies__icone img-alura" src="assets/programas.png" alt="Programar" />
+                <p class="hobbies__nome">Programar</p>
             </li>
             <li class="hobbies__elemento">
-                <img class="hobbies__icone" src="assets/camera_icon.png" alt="Fotografar" />
-                <p class="hobbies__nome">Fotografar</p>
+                <img class="hobbies__icone img-alura" src="assets/capacete.png" alt="Capacete" />
+                <p class="hobbies__nome">Andar de Moto</p>
             </li>
         </ul>
     </section>
@@ -157,24 +142,24 @@
         <h2 class="formacao__titulo">Formação Acadêmica</h2>
         <ul class="formacao__lista">
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/ufpr_logo.png" alt="UFPR" />
+                <img class="formacao__icone" src="assets/equipe.png" alt="UFPR" />
                 <div>
-                    <h3 class="formacao__nome">Análise de Dados</h3>
-                    <p class="formacao__detalhe">2018 - UFPR</p>
+                    <h3 class="formacao__nome">Técnico Em Administração</h3>
+                    <p class="formacao__detalhe">Centro de Educação Profissional de Itajubá</p>
                 </div>
             </li>
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/alura_logo.png" alt="Alura" />
+                <img class="formacao__icone  img-alura" src="assets/alura2.png" alt="Alura" />
                 <div>
-                    <h3 class="formacao__nome">Formação em UX Design</h3>
-                    <p class="formacao__detalhe">2019 - Alura</p>
+                    <h3 class="formacao__nome">Formação Front End Oracle ONE na Alura Latam</h3>
+                    <p class="formacao__detalhe">2024 - Em Andamento</p>
                 </div>
             </li>
             <li class="formacao__elemento">
-                <img class="formacao__icone" src="assets/ufrj_logo.png" alt="UFRJ" />
+                <img class="formacao__icone" src="assets/especialista-em-informatica.png" alt="UFRJ" />
                 <div>
-                    <h3 class="formacao__nome">Pós-graduação em Design</h3>
-                    <p class="formacao__detalhe">Em andamento - UFRJ</p>
+                    <h3 class="formacao__nome">Técnico Em Informática</h3>
+                    <p class="formacao__detalhe">Colégio de Itajubá</p>
                 </div>
             </li>
         </ul>
@@ -183,21 +168,46 @@
     <!-- Seção de Projetos -->
     <section class="projetos" id="projetos">
         <h2 class="projetos__titulo">Experiência Profissional</h2>
-        <div class="projetos__conteiner">
-            <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
-                quisquam unde repudiandae fugiat, earum temporibus!
-            </p>
+        <div class="projeto-container">
+            <div class="projetos__conteiner--jogo">
+                <h3 class="projetos__jogoSecreto">Jogo Secreto</h3>
+                <p>Challenge Alura Codificador</p>
+                <img src="assets/Jogo-secreto.jpg" alt="pagina inicial do jogo secreto"
+                    class="projeto__jogoSecreto--img">
+                <p class="projetos__jogoSecreto--descricao">
+                    Consiste em adivinhar um número aleatório entre 1 e 10
+                </p>
+                <div class="projetos__jogoSecreto--links">
+                    <a href="https://github.com/Fas-DevNaWeb" target="_blank">
+                        <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub" class="projeto__jogoSecreto--assets"></div>
+                    </a>
+                    <div class="projeto__jogoSecreto--button">
+                        <a href="https://projetos-vg2m.vercel.app/"
+                            target="_blank">Jogar</a> <img src="assets/vercel-icon-svgrepo-com.svg" alt="GitHub"
+                            class="projeto__jogoSecreto--assets"></div>
+                        </a>
+                </div>
+            </div>
+
+            <div class="projetos__conteiner--formulario">
+                <h3 class="projetos__formulario">Gustosão Lanches</h3>
+                <p>Challenge Para trabalhar com formulários</p>
+                <img src="assets/projeto-formulario.jpg" alt="pagina inicial do jogo secreto" class="projeto__jogoSecreto--img">
+                <p class="projetos__jogoSecreto--descricao">
+                    Consiste em uma página que calcula o pedifo do cliente
+                </p>
+                <div class="projetos__jogoSecreto--links">
+                    <a href="https://github.com/Fas-DevNaWeb" target="_blank">
+                        <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub" class="projeto__jogoSecreto--assets"></div>
+                    </a>
+                    <div class="projeto__jogoSecreto--button">
+                        <a href="https://projetos-black-eight.vercel.app/" target="_blank">Ver detalhes</a> <img src="assets/vercel-icon-svgrepo-com.svg" alt="GitHub"
+                            class="projeto__jogoSecreto--assets"></div>
+                        </a>
+                </div>
+            </div>
         </div>
-        <div class="projetos__conteiner">
-            <h3 class="projetos__nome">Título da Experiência</h3>
-            <p class="projetos__descricao">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
-                quisquam unde repudiandae fugiat, earum temporibus!
-            </p>
-        </div>
-    </section>
+    </section> 
 
     <!-- Seção de Contato -->
     <section class="contato" id="contato">
