modelo no tamanho desktop concluido

--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
         <header class="cabecalho">
             <h1 class="cabecalho__titulo">
                 <img class="cabecalho__logo" src="assets/vector.png" alt="Logo" />
-                Fabiano Alves Santos
+                <h4 class="f">F</h4>
+                <h4 class="a">A</h4>
+                <h4 class="b">S</h4>
+                <h4 class="i">-</h4>
+                <h4 class="c">N</h4>
+                <h4 class="n">A</h4>
+                <h4 class="o">W</h4>
+                <h4 class="o">E</h4>
+                <h4 class="o">B</h4>
+
             </h1>
             <nav class="navegacao">
                 <ul class="navegacao__lista">
                     <li class="navegacao__elemento">
-                        <a href="#sobre-mim">Sobre mim</a>
+                        <a href="#sobre-mim" class="y">Sobre mim</a>
                     </li>
                     <li class="navegacao__elemento">
-                        <a href="#habilidades">Habilidades</a>
+                        <a href="#habilidades" class="z">Habilidades</a>
                     </li>
-                    <li class="navegacao__elemento"><a href="#hobbies">Hobbies</a></li>
-                    <li class="navegacao__elemento"><a href="#formacao">Formação</a></li>
-                    <li class="navegacao__elemento"><a href="#projetos">Projetos</a></li>
-                    <li class="navegacao__elemento"><a href="#contato">Contato</a></li>
+                    <li class="navegacao__elemento"><a href="#hobbies" class="l">Hobbies</a></li>
+                    <li class="navegacao__elemento"><a href="#formacao" class="m">Formação</a></li>
+                    <li class="navegacao__elemento"><a href="#projetos" class="p">Projetos</a></li>
+                    <li class="navegacao__elemento"><a href="#contato" class="q">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -134,7 +143,7 @@
             <h2 class="formacao__titulo">Formação Acadêmica</h2>
             <ul class="formacao__lista">
                 <li class="formacao__elemento">
-                    <img class="formacao__icone" src="assets/equipe.png" alt="UFPR" />
+                    <img class="formacao__icone" src="assets/cep.jpg" alt="Imagem da logo da escola" />
                     <div>
                         <h3 class="formacao__nome">Técnico Em Administração</h3>
                         <p class="formacao__detalhe">Centro de Educação Profissional de Itajubá</p>
@@ -148,7 +157,7 @@
                     </div>
                 </li>
                 <li class="formacao__elemento">
-                    <img class="formacao__icone" src="assets/especialista-em-informatica.png" alt="UFRJ" />
+                    <img class="formacao__icone" src="assets/colegio de itajuba.png" alt="Logo da escola" />
                     <div>
                         <h3 class="formacao__nome">Técnico Em Informática</h3>
                         <p class="formacao__detalhe">Colégio de Itajubá</p>
@@ -171,10 +180,12 @@
                         Consiste em adivinhar um número aleatório entre 1 e 10
                     </p>
                     <div class="projetos__jogoSecreto--links">
+                        <!--
                         <a href="https://github.com/Fas-DevNaWeb" target="_blank" class="cor-botao--filho">
                             <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub"
                                     class="projeto__jogoSecreto--assets"></div>
                         </a>
+                        -->
                         <div class="projeto__jogoSecreto--button">
                             <a href="https://projetos-vg2m.vercel.app/" target="_blank"
                                 class="cor-botao--filho">Jogar</a> <img src="assets/vercel-icon-svgrepo-com.svg"
@@ -193,10 +204,12 @@
                         Consiste em uma página que calcula o pedifo do cliente
                     </p>
                     <div class="projetos__jogoSecreto--links">
+                        <!--
                         <a href="https://github.com/Fas-DevNaWeb" target="_blank" class="cor-botao--filho">
                             <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub"
                                     class="projeto__jogoSecreto--assets"></div>
                         </a>
+                    -->
                         <div class="projeto__jogoSecreto--button">
                             <a href="https://projetos-black-eight.vercel.app/" target="_blank"
                                 class="cor-botao--filho">Ver detalhes</a> <img src="assets/vercel-icon-svgrepo-com.svg"
@@ -217,10 +230,12 @@
                         Aqui utiliza-se do conceito de promese para mostrar um pet aleatório
                     </p>
                     <div class="projetos__jogoSecreto--links">
+                        <!--
                         <a href="https://github.com/Fas-DevNaWeb" target="_blank" class="cor-botao--filho">
                             <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub"
                                     class="projeto__jogoSecreto--assets"></div>
                         </a>
+                    -->
                         <div class="projeto__jogoSecreto--button">
                             <a href="https://projetos-1s82.vercel.app/" target="_blank" class="cor-botao--filho" +>Ver
                                 detalhes</a> <img src="assets/vercel-icon-svgrepo-com.svg" alt="GitHub"
@@ -239,10 +254,12 @@
                         Consiste em encriptografar e Descriptograr um texto.
                     </p>
                     <div class="projetos__jogoSecreto--links">
+                        <!--
                         <a href="https://github.com/Fas-DevNaWeb" target="_blank" class="cor-botao--filho">
                             <div class="projeto__jogoSecreto--button">GitHub <img src="assets/github.png" alt="GitHub"
                                     class="projeto__jogoSecreto--assets"></div>
                         </a>
+                    -->
                         <div class="projeto__jogoSecreto--button">
                             <a href="https://projeto-decodificador-nine.vercel.app/" target="_blank"
                                 class="cor-botao--filho">Ver detalhes</a> <img src="assets/vercel-icon-svgrepo-com.svg"
@@ -256,19 +273,27 @@
 
         <!-- Seção de Contato -->
         <section class="contato" id="contato">
-            <div class="contato__grupo">
-                <h2 class="contato__titulo">Contato</h2>
-                <form class="contato__formulario">
-                    <div class="contato__formulario--grupo">
-                        <input class="contato__campo" type="text" placeholder="Nome" />
-                        <input class="contato__campo" type="email" placeholder="E-mail" />
-                    </div>
-                    <label for="">Mensagem</label>
-                    <textarea class="contato__campo contato__campo--textarea" placeholder="Mensagem"></textarea>
-                    <button class="contato__botao" type="submit">Enviar</button>
-                </form>
-            </div>
+            <h2 class="contato__titulo">Contato</h2>
+            <form class="contato__formulario">
+                <div class="contato__formulario--divisao">
+                    <input class="contato__campo" type="text" placeholder="Nome" />
+                    <input class="contato__campo" type="email" placeholder="E-mail" />
+                </div>
+                <label for="">MENSAGEM</label>
+                <textarea rows="25" class="contato__campo--textarea" placeholder="Digite sua mensagem ....."></textarea>
+                <button class="contato__botao1" type="submit">Enviar</button>
+            </form>
         </section>
+
+        <footer class="container__footer">
+            <h1 class="footer__titulo">Produzido por - Fabiano ALves Santos (2024)</h1>
+            <div class="container__footer--icones">
+                <a href="https://github.com/Fas-DevNaWeb" target="_blank"><img class="icones__footer--teste"
+                        src="assets/github.png" alt="icone do github"></a>
+                <a href="https://www.linkedin.com/in/fabiano-fasnaweb-desenvolvedor/" target="_blank"><img class="icones__footer--teste"
+                        src="assets/linkedin-icon.svg" alt="icone do Linkedim"></a>
+            </div>
+        </footer>
 </body>
 
 </html>
