--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 </li>
 
                 <li class="habilidades__elemento">
-                    <img class="habilidades__icone" src="assets/react_icon.png" alt="React" />
-                    <p class="habilidades__nome">React</p>
+                    <img class="habilidades__icone" src="assets/git.png" alt="React" />
+                    <p class="habilidades__nome">Git</p>
                 </li>
             </ul>
         </section>
