parte do processo terminado

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
             <div class="container__footer--icones">
                 <a href="https://github.com/Fas-DevNaWeb" target="_blank"><img class="icones__footer--teste"
                         src="assets/github.png" alt="icone do github"></a>
-                <a href="https://www.linkedin.com/in/fabiano-fasnaweb-desenvolvedor/" target="_blank"><img class="icones__footer--teste"
-                        src="assets/linkedin-icon.svg" alt="icone do Linkedim"></a>
+                <a href="https://www.linkedin.com/in/fabiano-fasnaweb-desenvolvedor/" target="_blank"><img
+                        class="icones__footer--teste" src="assets/linkedin-icon.svg" alt="icone do Linkedim"></a>
             </div>
         </footer>
 </body>
