terminando requisitos do projeto

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             <h2 class="contato__titulo">Contato</h2>
             <form class="contato__formulario">
                 <div class="contato__formulario--divisao">
-                    <input class="contato__campo" type="text" placeholder="Nome" />
-                    <input class="contato__campo" type="email" placeholder="E-mail" />
+                    <input class="contato__campo" type="text" placeholder="Nome" required />
+                    <input class="contato__campo" type="email" placeholder="E-mail" required/>
                 </div>
                 <label for="">MENSAGEM</label>
                 <textarea rows="25" class="contato__campo--textarea" placeholder="Digite sua mensagem ....."></textarea>
